--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,11 @@ forge_version=43.2.2
 mcp_channel=official
 mcp_mappings=1.19.2
 
+#Publishing
+mod_name=Chowder Express
+curseforge_id=783410
+modrinth_id=CcY0wAVw
+
 # Version
 version=1.1.0
 
