--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,13 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Base info
-mc_version=1.19.4
-forge_version=45.0.43
-mcp_channel=official
-mcp_mappings=1.19.4
+mc_version=1.20.1
+forge_version=47.0.19
+mapping_channel=official
+mapping_version=1.20.1
+mod_group=com.mrbysco.chowderexpress
+mod_id=chowderexpress
+mod_archive_name=ChowderExpress
 
 #Publishing
 mod_name=Chowder Express
@@ -15,7 +18,7 @@ curseforge_id=783410
 modrinth_id=CcY0wAVw
 
 # Version
-version=1.3.0
+version=2.0.0
 
 # Dependencies
-jei_version=13.1.0.2
+jei_version=15.1.0.19
