--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Base info
-mc_version=1.20.2
-neo_version=20.2.70-beta
+mc_version=1.20.1
+forge_version=47.1.3
 mapping_channel=official
-mapping_version=1.20.2
+mapping_version=1.20.1
 mod_group=com.mrbysco.chowderexpress
 mod_id=chowderexpress
 mod_archive_name=ChowderExpress
@@ -18,7 +18,7 @@ curseforge_id=783410
 modrinth_id=CcY0wAVw
 
 # Version
-version=3.0.0
+version=2.0.0
 
 # Dependencies
 jei_version=15.2.0.23
